--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-  <header class="page-header">
+  <!-- <header class="page-header">
     <div class="container page-header__container">
       <nav class="nav">
         <a href="" class="logo">
@@ -43,7 +43,7 @@
       </ul>
     </div>
   
-  </header>
+  </header> -->
     <main>
       <!---------------------- фильтр ---------------------------------->
       <section class="section">
