--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
         <ul class="contacts list">
           <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts__link">
-            <svg class="contacts__icon" width="16" height="12">
+            <svg class="contacts__icon contacts__icon--envelope" width="16" height="12">
             <use href="./images/icons.svg#icon-envelope"></use>
           </svg>info@devstudio.com</a>
         </li>
 
           <li class="contacts__item"><a href="tel:+380961111111" class="contacts__link">
-            <svg class="contacts__icon" width="10" height="16">
+            <svg class="contacts__icon contacts__icon--smart" width="10" height="16">
             <use href="./images/icons.svg#icon-smartphone"></use>
           </svg>+38 096 111 11 11</a>
         </li>
@@ -65,34 +65,32 @@
 
             <div class="contacts-soc-wrap">
               <ul class="mobile-contacts list">
+                <li class="mobile-contacts__item">
+                  <a href="tel:+380961111111" class="mobile-contacts__link">+38 096 111 11 11</a>
+               </li>
+
                <li class="mobile-contacts__item">
-                 <a href="tel:+380961111111" class="mobile-contacts__link">+38 096 111 11 11</a>
-            
-        </li>
+                  <a href="mailto:info@devstudio.com" class="mobile-contacts__link mobile-contacts__link--dark">info@devstudio.com</a>   
+               </li>
+             </ul>
 
-          <li class="mobile-contacts__item">
-            <a href="mailto:info@devstudio.com" class="mobile-contacts__link mobile-contacts__link--dark">info@devstudio.com</a>
-            
-        </li>
-        </ul>
+              <ul class="mobile-soc list">
+                <li class="mobile-soc__item">
+                   <a href="" class="mobile-soc__link">Instagram</a>
+               </li>
 
-          <ul class="mobile-soc list">
-          <li class="mobile-soc__item">
-            <a href="" class="mobile-soc__link">Instagram</a>
-          </li>
+                <li class="mobile-soc__item">
+                   <a href="" class="mobile-soc__link">Twitter</a>
+               </li>
 
-          <li class="mobile-soc__item">
-            <a href="" class="mobile-soc__link">Twitter</a>
-          </li>
+                <li class="mobile-soc__item">
+                   <a href="" class="mobile-soc__link">Facebook</a>
+               </li>
 
-          <li class="mobile-soc__item">
-            <a href="" class="mobile-soc__link">Facebook</a>
-          </li>
-
-          <li class="mobile-soc__item">
-            <a href="" class="mobile-soc__link">LinkedIn</a>
-          </li>
-        </ul>
+                <li class="mobile-soc__item">
+                   <a href="" class="mobile-soc__link">LinkedIn</a>
+                </li>
+             </ul>
             </div> 
             </div>
           </div>
