--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,15 @@
 
     <header class="page-header">
       <div class="container page-header__container">
-        <nav class="nav">
-          <a href="" class="logo">
+        <a href="" class="logo">
             Web<span class="logo__text">Studio</span>
           </a>
+            <button class="menu-open-button" type="button">
+          <svg class="menu-open-button__icon" width="40" height="40">
+              <use href="./images/icons.svg#icon-menu-open"></use>
+            </svg>
+        </button>
+        <nav class="nav">  
           <ul class="site-nav list">
             <li class="site-nav__item"><a href="./index.html" class="site-nav__link">Студия</a></li>
             <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--active">Портфолио</a></li>
@@ -33,19 +38,65 @@
 
         <ul class="contacts list">
           <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts__link">
-            <svg class="contacts__icon" width="16" height="12">
+            <svg class="contacts__icon contacts__icon--envelope" width="16" height="12">
             <use href="./images/icons.svg#icon-envelope"></use>
           </svg>info@devstudio.com</a>
         </li>
 
           <li class="contacts__item"><a href="tel:+380961111111" class="contacts__link">
-            <svg class="contacts__icon" width="10" height="16">
+            <svg class="contacts__icon contacts__icon--smart" width="10" height="16">
             <use href="./images/icons.svg#icon-smartphone"></use>
           </svg>+38 096 111 11 11</a>
         </li>
 
         </ul>
       </div>
+
+          <div class="mobile-menu is-open">
+            <div class="container mobile-menu__container">
+               <button class="menu-close-button" type="button">
+               <svg class="menu-close-button__icon" width="40" height="40">
+              <use href="./images/icons.svg#icon-menu-close"></use>
+            </svg>
+          </button>
+
+           <ul class="mobile-nav list">
+            <li class="mobile-nav__item"><a href="./index.html" class="mobile-nav__link ">Студия</a></li>
+            <li class="mobile-nav__item"><a href="./portfolio.html" class="mobile-nav__link mobile-nav__link--active">Портфолио</a></li>
+            <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Контакты</a></li>
+          </ul>
+
+            <div class="contacts-soc-wrap">
+              <ul class="mobile-contacts list">
+                <li class="mobile-contacts__item">
+                  <a href="tel:+380961111111" class="mobile-contacts__link">+38 096 111 11 11</a>  
+               </li>
+
+               <li class="mobile-contacts__item">
+                 <a href="mailto:info@devstudio.com" class="mobile-contacts__link mobile-contacts__link--dark">info@devstudio.com</a>  
+              </li>
+            </ul>
+
+             <ul class="mobile-soc list">
+               <li class="mobile-soc__item">
+                  <a href="" class="mobile-soc__link">Instagram</a>
+              </li>
+
+               <li class="mobile-soc__item">
+                 <a href="" class="mobile-soc__link">Twitter</a>
+              </li>
+
+               <li class="mobile-soc__item">
+                  <a href="" class="mobile-soc__link">Facebook</a>
+              </li>
+
+               <li class="mobile-soc__item">
+                  <a href="" class="mobile-soc__link">LinkedIn</a>
+              </li>
+            </ul>
+            </div> 
+            </div>
+          </div>
     
      
     </header> 
