--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
     <!-- Шапка сайта -->
      <header class="page-header">
       <div class="container page-header__container">
-        <a href="" class="logo">
+
+          <a href="" class="logo">
             Web<span class="logo__text">Studio</span>
           </a>
+
           <button class="menu-open-button" type="button">
           <svg class="menu-open-button__icon" width="40" height="40">
               <use href="./images/icons.svg#icon-menu-open"></use>
             </svg>
         </button>
+
         <nav class="nav">
           <ul class="site-nav list">
             <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--active">Студия</a></li>
@@ -49,8 +52,9 @@
         </ul>
       </div>
         
-           <div class="mobile-menu is-open">
+           <div class="mobile-menu">
             <div class="container mobile-menu__container">
+              
             <button class="menu-close-button" type="button">
              <svg class="menu-close-button__icon" width="40" height="40">
               <use href="./images/icons.svg#icon-menu-close"></use>
