--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,17 @@
 
     <header class="page-header">
       <div class="container page-header__container">
-        <a href="" class="logo">
+
+          <a href="" class="logo">
             Web<span class="logo__text">Studio</span>
           </a>
+
             <button class="menu-open-button" type="button">
           <svg class="menu-open-button__icon" width="40" height="40">
               <use href="./images/icons.svg#icon-menu-open"></use>
             </svg>
-        </button>
+           </button>
+
         <nav class="nav">  
           <ul class="site-nav list">
             <li class="site-nav__item"><a href="./index.html" class="site-nav__link">Студия</a></li>
@@ -52,13 +55,14 @@
         </ul>
       </div>
 
-          <div class="mobile-menu is-open">
+          <div class="mobile-menu ">
             <div class="container mobile-menu__container">
+
                <button class="menu-close-button" type="button">
                <svg class="menu-close-button__icon" width="40" height="40">
               <use href="./images/icons.svg#icon-menu-close"></use>
-            </svg>
-          </button>
+             </svg>
+              </button>
 
            <ul class="mobile-nav list">
             <li class="mobile-nav__item"><a href="./index.html" class="mobile-nav__link ">Студия</a></li>
@@ -339,8 +343,7 @@
             </div>
             </form>
   </div>
-
-
 </footer>
+<script src="./js/menu.js"></script>
   </body>
 </html>
