--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
-              Соглашаюсь с рассылкой и принимаю &nbsp; <a class="checkbox-link" href="">Условия договора</a>
+              Соглашаюсь с рассылкой и принимаю  <a class="checkbox-link" href="">Условия договора</a>
             </label>
            </div>
 
