делает фотографии команды

--- a/index.html
+++ b/index.html
@@ -211,7 +211,18 @@
           <ul class="team list">
 
             <li class="team-item">
-              <img class="team-image" src="./images/img.jpg" alt="Мужчина в бордовой рубашке" width="270" height="260" />
+              <picture>
+                <source srcset="./images/ihor-1x.jpg 1x,
+                 ./images/ihor-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/ihor-1x-tab.jpg 1x,
+                 ./images/ihor-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/ihor-1x-mob.jpg 1x,
+                 ./images/ihor-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/ihor-2x-mob.jpg" alt="Мужчина в бордовой рубашке"/>
+              </picture>
+              
               <div class="team-name">
                   <h3 class="team-title">Игорь Демьяненко</h3>
                   <p lang="en" class="team-text">Product Designer</p>
@@ -256,7 +267,18 @@
 
 
             <li class="team-item">
-              <img class="team-image" src="./images/img(1).jpg" alt="Девушка в тёмном костюме" width="270" height="260" />
+               <picture>
+                <source srcset="./images/olga-1x.jpg 1x,
+                 ./images/olga-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/olga-1x-tab.jpg 1x,
+                 ./images/olga-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/olga-1x-mob.jpg 1x,
+                 ./images/olga-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/olga-2x-mob.jpg" alt="Девушка в темном костюме"/>
+              </picture>
+
               <div class="team-name">
                   <h3 class="team-title">Ольга Репина</h3>
                   <p lang="en" class="team-text">Frontend Developer</p>
@@ -301,7 +323,17 @@
 
 
             <li class="team-item">
-              <img class="team-image" src="./images/img(2).jpg" alt="Мужчина в голубой рубашке" width="270" height="260" />
+               <picture>
+                <source srcset="./images/nik-1x.jpg 1x,
+                 ./images/nik-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/nik-1x-tab.jpg 1x,
+                 ./images/nik-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/nik-1x-mob.jpg 1x,
+                 ./images/nik-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/nik-2x-mob.jpg" alt="Мужчина в голубой рубашке"/>
+              </picture>
               <div class="team-name">
                 <h3 class="team-title">Николай Тарасов</h3>
                 <p lang="en" class="team-text">Marketing</p>
@@ -346,7 +378,17 @@
 
 
             <li class="team-item">
-              <img class="team-image" src="./images/img(3).jpg" alt="Мужчина в тёмной футболке" width="270" height="260" />
+               <picture>
+                <source srcset="./images/mich-1x.jpg 1x,
+                 ./images/mich-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/mich-1x-tab.jpg 1x,
+                 ./images/mich-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/mich-1x-mob.jpg 1x,
+                 ./images/mich-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/mich-2x-mob.jpg" alt="Мужчина в тёмной футболке"/>
+              </picture>
               <div class="team-name">
                   <h3 class="team-title">Михаил Ермаков</h3>
                   <p lang="en" class="team-text">UI Designer</p>
