--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,17 @@
               <li class="work-item">
                 <a href="" class="work-link">
                   <div class="work-top-wrap">
-                    <img src="./images/img4.jpg" alt="проект 1" width="370" class="work-image" />
+                    <picture>
+                <source srcset="./images/project1-1x.jpg 1x,
+                 ./images/project1-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/project1-1x-tab.jpg 1x,
+                 ./images/project1-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/project1-1x-mob.jpg 1x,
+                 ./images/project1-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/project1-2x-mob.jpg" alt="проэкт"/>
+              </picture>
                       <p class="work-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                         позволит посетителю получить
                         исчерпывающие сведения о компании или частном лице.</p>
@@ -153,7 +163,17 @@
                 <a href="" class="work-link">
                  
                     <div class="work-top-wrap">
-                      <img src="./images/img5.jpg" alt="проект 1" width="370" class="work-image" />
+                           <picture>
+                <source srcset="./images/project2-1x.jpg 1x,
+                 ./images/project2-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/project2-1x-tab.jpg 1x,
+                 ./images/project2-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/project2-1x-mob.jpg 1x,
+                 ./images/project2-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/project2-2x-mob.jpg" alt="проэкт"/>
+              </picture>
                       <p class="work-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                         позволит посетителю получить
                         исчерпывающие сведения о компании или частном лице.</p>
@@ -169,7 +189,17 @@
               <li class="work-item">
                 <a href="" class="work-link">
                     <div class="work-top-wrap">
-                      <img src="./images/img6.jpg" alt="проект 1" width="370" class="work-image" />
+              <picture>
+                <source srcset="./images/project3-1x.jpg 1x,
+                 ./images/project3-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/project3-1x-tab.jpg 1x,
+                 ./images/project3-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/project3-1x-mob.jpg 1x,
+                 ./images/project3-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/project3-2x-mob.jpg" alt="проэкт"/>
+              </picture>
                       <p class="work-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                         позволит посетителю получить
                         исчерпывающие сведения о компании или частном лице.</p>
@@ -184,7 +214,17 @@
               <li class="work-item">
                 <a href="" class="work-link">
                   <div class="work-top-wrap">
-                    <img src="./images/img7.jpg" alt="проект 1" width="370" class="work-image" />
+                          <picture>
+                <source srcset="./images/project4-1x.jpg 1x,
+                 ./images/project4-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/project4-1x-tab.jpg 1x,
+                 ./images/project4-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/project4-1x-mob.jpg 1x,
+                 ./images/project4-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/project4-2x-mob.jpg" alt="проэкт"/>
+              </picture>
                     <p class="work-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить
                       исчерпывающие сведения о компании или частном лице.</p>
@@ -199,7 +239,17 @@
               <li class="work-item">
                 <a href="" class="work-link">
                     <div class="work-top-wrap">
-                      <img src="./images/img8.jpg" alt="проект 1" width="370" class="work-image" />
+                            <picture>
+                <source srcset="./images/project5-1x.jpg 1x,
+                 ./images/project5-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/project5-1x-tab.jpg 1x,
+                 ./images/project5-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/project5-1x-mob.jpg 1x,
+                 ./images/project5-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/project5-2x-mob.jpg" alt="проэкт"/>
+              </picture>
                       <p class="work-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                         позволит посетителю получить
                         исчерпывающие сведения о компании или частном лице.</p>
@@ -214,7 +264,17 @@
               <li class="work-item">
                 <a href="" class="work-link">
                     <div class="work-top-wrap">
-                      <img src="./images/img9.jpg" alt="проект 1" width="370" class="work-image" />
+                            <picture>
+                <source srcset="./images/project6-1x.jpg 1x,
+                 ./images/project6-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/project6-1x-tab.jpg 1x,
+                 ./images/project6-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/project6-1x-mob.jpg 1x,
+                 ./images/project6-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/project6-2x-mob.jpg" alt="проэкт"/>
+              </picture>
                       <p class="work-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                         позволит посетителю получить
                         исчерпывающие сведения о компании или частном лице.</p>
@@ -229,7 +289,17 @@
               <li class="work-item">
                 <a href="" class="work-link">
                   <div class="work-top-wrap">
-                    <img src="./images/img10.jpg" alt="проект 1" width="370" class="work-image" />
+                          <picture>
+                <source srcset="./images/project7-1x.jpg 1x,
+                 ./images/project7-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/project7-1x-tab.jpg 1x,
+                 ./images/project7-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/project7-1x-mob.jpg 1x,
+                 ./images/project7-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/project7-2x-mob.jpg" alt="проэкт"/>
+              </picture>
                     <p class="work-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить
                       исчерпывающие сведения о компании или частном лице.</p>
@@ -244,7 +314,17 @@
               <li class="work-item">
                 <a href="" class="work-link">
                   <div class="work-top-wrap">
-                    <img src="./images/img11.jpg" alt="проект 1" width="370" class="work-image" />
+                          <picture>
+                <source srcset="./images/project8-1x.jpg 1x,
+                 ./images/project8-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/project8-1x-tab.jpg 1x,
+                 ./images/project8-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/project8-1x-mob.jpg 1x,
+                 ./images/project8-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/project8-2x-mob.jpg" alt="проэкт"/>
+              </picture>
                     <p class="work-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить
                       исчерпывающие сведения о компании или частном лице.</p>
@@ -259,7 +339,17 @@
               <li class="work-item">
                 <a href="" class="work-link">
                   <div class="work-top-wrap">
-                    <img src="./images/img12.jpg" alt="проект 1" width="370" class="work-image" />
+                          <picture>
+                <source srcset="./images/project9-1x.jpg 1x,
+                 ./images/project9-2x.jpg 2x" media="(min-width:1200px)">
+
+                <source srcset="./images/project9-1x-tab.jpg 1x,
+                 ./images/project9-2x-tab.jpg 2x" media="(min-width:768px)">
+
+                <source srcset="./images/project9-1x-mob.jpg 1x,
+                 ./images/project9-2x-mob.jpg 2x" media="(min-width:320px)">
+                  <img src="./images/project9-2x-mob.jpg" alt="проэкт"/>
+              </picture>
                     <p class="work-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить
                       исчерпывающие сведения о компании или частном лице.</p>
